sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:20: error: '(' expected but identifier found.
  } while echangefait=1
          ^